added graphics projects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <hgroup>
     <h3>The Dimension of Sparse Random Graph Orders</h3>
     <a href="https://youtu.be/7kGkBQDHszU">(presentation)</a>
-    <a href="https://arxiv.org/abs/2504.19029">[arXiv preprint]</a>
+    <a href="https://arxiv.org/abs/2504.19029">{arXiv preprint}</a>
     <span class="right">May 2024 - Aug 2024</span>
    </hgroup>
    <ul>
@@ -50,10 +50,35 @@
    </ul>
    <h2>Projects</h2>
    <hgroup>
+    <h3>Software Rasterizer</h3>
+    | C++
+    <a href="./projects/software-rasterizer/cornell-box.png">[png]</a>
+    <a href="./projects/software-rasterizer/textured.png">[png]</a>
+    <span class="right">June 2025</span>
+   </hgroup>
+   <ul>
+    <li>Created for the CS 488 graphics course at the University of Waterloo</li>
+    <li>Recreated the whole rasterization process on the CPU, including perspective transformation, triangle rasterization, depth buffering, and perspective correct interpolation</li>
+   </ul>
+   <hgroup>
+    <h3>Software Raytracer</h3>
+    | C++
+    <a href="./projects/software-raytracer/test-object.png">[png]</a>
+    <a href="./projects/software-raytracer/metal-teapot.png">[png]</a>
+    <a href="./projects/software-raytracer/glass-teapot.png">[png]</a>
+    <a href="./projects/software-raytracer/bunny.png">[png]</a>
+    <span class="right">May 2025 - June 2025</span>
+   </hgroup>
+   <ul>
+    <li>Created for the CS 488 graphics course at the University of Waterloo</li>
+    <li>Implemented the Möller–Trumbore algorithm for fast ray-triangle intersection</li>
+    <li>Programmed Lambertian diffuse, specular refraction, and specular reflection behaviour, and support for spherical environment mapping</li>
+   </ul>
+   <hgroup>
     <h3>Software Raycaster</h3>
     | JavaScript
     <a href="https://arnavcs.github.io/software-raycaster">[web]</a>
-    <a href="https://github.com/arnavcs/software-raycaster">[Github]</a>
+    <a href="https://github.com/arnavcs/software-raycaster">{Github}</a>
     <span class="right">Sep 2024 - Oct 2024</span>
    </hgroup>
    <ul>
@@ -63,8 +88,8 @@
     <h3>Renovating the Labyrinth</h3>
     | JavaScript
     <a href="https://arnavcs.github.io/renovating-the-labyrinth">[web]</a>
-    <a href="https://arnavcs.itch.io/renovating-the-labyrinth">[itch.io]</a>
-    <a href="https://github.com/arnavcs/renovating-the-labyrinth">[Github]</a>
+    <a href="https://arnavcs.itch.io/renovating-the-labyrinth">{itch.io}</a>
+    <a href="https://github.com/arnavcs/renovating-the-labyrinth">{Github}</a>
     <span class="right">Oct 2024</span>
    </hgroup>
    <ul>
@@ -75,8 +100,8 @@
    <hgroup>
     <h3>Bloom</h3>
     | Godot
-    <a href="https://kdxiao.itch.io/bloom">[itch.io]</a>
-    <a href="https://github.com/kdxiao/bloom">[Github]</a>
+    <a href="https://kdxiao.itch.io/bloom">{itch.io}</a>
+    <a href="https://github.com/kdxiao/bloom">{Github}</a>
     <span class="right">May 2024 - Jun 2024</span>
    </hgroup>
    <ul>
@@ -86,9 +111,9 @@
    <hgroup>
     <h3>Interplanetary File Explorer</h3>
     | Go, Python, JavaScript
-    <a href="https://ipfe.elguindi.xyz/">[web]</a>
-    <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
-    <a href="https://devpost.com/software/changeme">[Devpost]</a>
+    <a href="https://ipfe.elguindi.xyz/">{web}</a>
+    <a href="https://github.com/youssefsoli/IPFE">{Github}</a>
+    <a href="https://devpost.com/software/changeme">{Devpost}</a>
     <span class="right">Jan 2023</span>
    </hgroup>
    <ul>
@@ -99,7 +124,7 @@
    <hgroup>
     <h3>Prognosing IPF</h3>
     | Python
-    <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
+    <a href="./projects/prognosing-ipf/osic-cwsf-paper.pdf">[CWSF paper]</a>
     <span class="right">Dec 2020 - Jun 2021</span>
    </hgroup>
    <ul>
@@ -308,7 +333,7 @@
    <br/>
    <ul class="blank">
     <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-    <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <a href="">(episode)</a> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+    <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
     <li>Jun 28 2025 <em>Hunter×Hunter 2011</em> by Madhouse Studios <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
     <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
     <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
