added devlog so far

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <main>
    <h2>Articles</h2>
    <ul class="blank">
+    <li>Jul 06 2025 <a href="./writings/2025-07-06-surfs-up.html">[Surf's Up]</a></li>
     <li>Jul 02 2025 <a href="./writings/2025-07-02-how-to-walk.html">[How to Walk]</a></li>
     <li>Jun 30 2025 <a href="./writings/2025-06-30-learning-humanity-from-ants.html">[Learning Humanity from Ants]</a></li>
     <li>May 07 2025 <a href="./writings/2025-05-07-the-sacred-marigold.html">[The Sacred Marigold]</a></li>
@@ -332,7 +333,11 @@
    </p>
    <br/>
    <ul class="blank">
-    <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Jul 10 2025 <em>Ranma ½ (2024)</em> by Takahashi Rumiko <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Jul 06 2025 <em>KPop Demon Hunters</em> by Chris Appelhans and Maggie Kang <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+    <li>Jul 05 2025 <em>Surf's Up</em> by Ash Brandon and Chris Buck <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Jul 03 2025 <em>Sinners</em> by Ryan Coogler <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+    <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
     <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
     <li>Jun 28 2025 <em>Hunter×Hunter 2011</em> by Madhouse Studios <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
     <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
