--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </header>
   <main>
    <h2>Site Introduction</h2>
-   <p>Check out some of the pages of this site via the links in the header.</p>
    <p>Links are surrounded by brackets. The type of bracket conveys the following:</p>
    <table>
     <tr><th rowspan=2 colspan=2 class="invis"></th><th colspan=2>Link Target</th></tr>
@@ -50,6 +49,26 @@
     <li>Coauthored paper during undergraduate research assistantship under professor Jane Gao</li>
    </ul>
    <h2>Projects</h2>
+   <hgroup>
+    <h3>WIP - 4D Raytracing Pathtracer</h3>
+    | C++
+    <a href="./projects/4d-raymarching-pathtracer/devlog.html">[devlog]</a>
+    <span class="right">July 2025</span>
+   </hgroup>
+   <ul>
+    <li>Final project for the CS 488 graphics course at the University of Waterloo</li>
+   </ul>
+   <hgroup>
+    <h3>Rigid-body Particle Simulation</h3>
+    | C++
+    <a href="./projects/rigid-body-particles/gravity.gif">[gif]</a>
+    <a href="./projects/rigid-body-particles/collisions.gif">[gif]</a>
+    <span class="right">July 2025</span>
+   </hgroup>
+   <ul>
+    <li>Created for the CS 488 graphics course at the University of Waterloo</li>
+    <li>Simulated gravity, spherical constraints, and collision physics for rigid body particles</li>
+   </ul>
    <hgroup>
     <h3>Software Rasterizer</h3>
     | C++
@@ -171,25 +190,16 @@
     <h3>High School Math Competition Lessons</h3>
     <span class="right">Summer 2023</span>
    </hgroup>
-   <table>
-    <tbody>
-     <tr>
-      <td><a href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a> divisibilty tricks</td>
-      <td><a href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a> writing solutions</td>
-      <td><a href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a> pigeonhole principle</td>
-     </tr>
-     <tr>
-      <td><a href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a> series and products</td>
-      <td><a href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a> intro geometry</td>
-      <td><a href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a> number bases &amp; induction</td>
-     </tr>
-     <tr>
-      <td><a href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a> points in a triangle</td>
-      <td><a href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a> cyclic quadrilaterals</td>
-      <td class="invis"></td>
-     </tr>
-    </tbody>
-   </table>
+   <ol>
+    <li><a href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[divisibilty tricks]</a> Divisibility, modular arithmetic, and deriving divisibility tricks</li>
+    <li><a href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[writing solutions]</a> Tips for writing readable proofs</li>
+    <li><a href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[pigeonhole principle]</a> The pigeonhole and generalized pigeonhole principles</li>
+    <li><a href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[series and products]</a> Telescoping series, common series, and term grouping strategies</li>
+    <li><a href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[intro geometry]</a> Basic triangle facts, and effects of transformations on geometric objects</li>
+    <li><a href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[number bases &amp; induction]</a> Number bases, (strong) induction, and an example from the KJMO</li>
+    <li><a href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[points in a triangle]</a> Involving (circum|in|ex|ortho)centers and centroids</li>
+    <li><a href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[cyclic quadrilaterals]</a> Power of a point, Ptolemy's theorem, and Brahmagupta's formula</li>
+   </ol>
   </main>
   <main>
    <h2>Formal Education</h2>
@@ -300,7 +310,7 @@
    <p>I am still going through entries ending with &amp;.</p>
    <h3>Operating Systems</h3>
    <ul>
-    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. Arpaci-Dusseau, Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a></li>
+    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. and Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a></li>
    </ul>
    <h3>Formal Logic &amp; Programming Theory</h3>
    <ul>
@@ -315,7 +325,7 @@
    </ul>
    <h3>Geometry &amp; Graphics</h3>
    <ul>
-    <li><em>Projective Geometric Algebra Illuminated</em> by Eric Lengyel <a href="https://projectivegeometricalgebra.org/">(website)</a> &amp;</li>
+    <li><em>Projective Geometric Algebra Illuminated</em> by Eric Lengyel &amp;</li>
     <li><em>Ray Tracing in One Weekend</em> by Peter Shirley, Trevor David Black, Steve Hollasch <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">(book)</a></li>
     <li><em>Computer Graphics from Scratch</em> by Gabriel Gambetta <a href="https://www.gabrielgambetta.com/computer-graphics-from-scratch/">(book)</a></li>
     <li>University of Utah CS 4600 <a href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a> <a href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a></li>
@@ -348,6 +358,54 @@
     <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
     <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
     <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
+   </ul>
+  </main>
+  <main>
+   <h2>Interesting Sites</h2>
+   <h3>Mathematics</h3>
+   <ul>
+    <li><a href="https://projectivegeometricalgebra.org/">(Projective Geometric Algebra)</a> Webpage that links to <a href="https://conformalgeometricalgebra.org/wiki/">(conformal)</a> and <a href="https://rigidgeometricalgebra.org/wiki/">(rigid)</a> algebra wikis</li>
+    <li><a href="https://artofproblemsolving.com/">(Art of Problem Solving)</a> Competition problem archive, and wiki</li>
+    <li><a href="https://artofproblemsolving.com/wiki/index.php/Proofs_without_words">(Proofs without words)</a> Cool visual proofs</li>
+    <li><a href="https://imogeometry.blogspot.com/">(Geometry Problems from IMO)</a> Olympiad geometry problems</li>
+    <li><a href="https://sites.google.com/site/imocanada/home">(Canada IMO training)</a> Links and resources for IMO training</li>
+    <li><a href="https://www.cut-the-knot.org/">(Cut the Knot)</a> A large number of mathematical puzzles</li>
+   </ul>
+   <h3>Computer Science</h3>
+   <ul>
+    <li><a href="https://teachyourselfcs.com/">(Teach Yourself CS)</a> Book and course recommendations for computer science</li>
+    <li><a href="https://github.com/dylanaraps/pure-sh-bible">(pure sh bible)</a> and <a href="https://github.com/dylanaraps/pure-bash-bible">(pure bash bible)</a> Pure shell code instead of external process invokation</li>
+    <li><a href="https://github.com/codecrafters-io/build-your-own-x">(Build Your Own X)</a> Learn to build a regex engine, OS, text editor, and much more</li>
+    <li><a href="https://herbie.uwplse.org/">(The Herbie Project)</a> Restructure floating point operations to reduce inaccuracy</li>
+    <li><a href="https://marctenbosch.com/">(Marc Ten Bosch)</a> 4D graphics via publications and blogs</li>
+    <li><a href="https://blog.demofox.org/">(The blog at the bottom of the sea)</a> Graphics, gamedev, computation, audio synthesis</li>
+    <li><a href="https://www.cemyuksel.com/">(Cem Yuksel)</a> Graphics research and teaching</li>
+    <li><a href="https://terathon.com/lengyel/">(Eric Lengyel)</a> Game engines, geometric algebra, and rendering</li>
+   </ul>
+   <h3>Search Engines</h3>
+   <ul>
+    <li><a href="https://www.qwant.com/">(Qwant)</a> Private search engine with independent search indexing</li>
+    <li><a href="https://wiby.me/">(wiby.me)</a> Search engine for personalized webpages and sites for hobbyists</li>
+    <li><a href="https://docs.searxng.org/">(searXNG)</a> Free metasearch engine (accumulates results from multiple engines)</li>
+   </ul>
+   <h3>Games</h3>
+   <ul>
+    <li><a href="https://www.puzzle-bridges.com/">(Puzzle Games)</a> Galaxies, Hashi, Star Battle, and much more</li>
+    <li><a href="https://gungi.io/">(Gungi.io)</a> Gungi, if you have a friend to play with</li>
+   </ul>
+   <h3>File Sharing</h3>
+   <ul>
+    <li><a href="https://0x0.st/">(The Null Pointer)</a> Temporary file hosting</li>
+    <li><a href="https://litterbox.catbox.moe/">(Litterbox)</a> Temporary file storage (≤ 1GB)</li>
+    <li><a href="https://litterbox.catbox.moe/">(Catbox)</a> Permanent file storage (≤ 200MB)</li>
+   </ul>
+   <h3>Miscellanous</h3>
+   <ul>
+    <li><a href="https://lukesmith.xyz/">(Luke Smith's Webpage)</a> Philosophy, unix, and linguistics</li>
+    <li><a href="https://lospec.com/">(Lospec)</a> Colour palettes and pixel art</li>
+    <li><a href="https://github.com/cat-milk/Anime-Girls-Holding-Programming-Books">(Anime Girls Holding Programming Books)</a> A Github repository of such images</li>
+    <li><a href="https://owlsintowels.org/">(Owls in Towels)</a> A site dedicated to owls in towels</li>
+    <li><a href="https://sadgrl.online/guides/">(sadgirl.online)</a> Guides on how to bypass paywalls and surf the web</li>
    </ul>
   </main>
   <footer>
