--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
    <main>
     <h2>Articles</h2>
     <ul class="blank">
-     <li>Jul 18 2025 <a href="./writings/2025-07-18-a-haiku-a-day.html">[A Haiku a Day]</a></li>
-     <li>Jul 06 2025 <a href="./writings/2025-07-06-surfs-up.html">[Surf's Up]</a></li>
+     <li>Jul 21 2025 <a href="./writings/2025-07-21-a-haiku-a-day.html">[A Haiku a Day]</a></li>
      <li>Jul 02 2025 <a href="./writings/2025-07-02-how-to-walk.html">[How to Walk]</a></li>
      <li>Jun 30 2025 <a href="./writings/2025-06-30-learning-humanity-from-ants.html">[Learning Humanity from Ants]</a></li>
      <li>May 07 2025 <a href="./writings/2025-05-07-the-sacred-marigold.html">[The Sacred Marigold]</a></li>
-     <li>Jan 01 2025 <a href="./writings/2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></li>
      <li>Nov 17 2024 <a href="./writings/2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a></li>
      <li>Nov 02 2024 <a href="./writings/2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a></li>
      <li>Sep 09 2024 <a href="./writings/2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a></li>
@@ -45,13 +43,15 @@
     <p>
      Stars indicate my rating and tags are organized as follows.
      <ul>
-      <li>Media form: <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>, <span class="tag">&lt;anime&gt;</span>, <span class="tag">&lt;animation&gt;</span>.</li>
+      <li>Media form: <span class="tag">&lt;game&gt;</span>, <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>, <span class="tag">&lt;anime&gt;</span>, <span class="tag">&lt;animation&gt;</span>.</li>
       <li>Language of Content: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</li>
      </ul>
     </p>
     <br/>
     <ul class="blank">
-     <li>Jul 14 2025 <em>Words Bubble Up Like Soda Pop</em> by Kyohei Ishiguro <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 21 2025 <em>Ghost Trick: Phantom Detective</em> by Capcom <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 16 2025 <em>The Coffin of Andy and Leyley</em> by Nemlei <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 14 2025 <em>Words Bubble Up Like Soda Pop</em> by Kyohei Ishiguro <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
      <li>Jul 10 2025 <em>Ranma ½ (2024)</em> by Takahashi Rumiko <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
      <li>Jul 06 2025 <em>KPop Demon Hunters</em> by Chris Appelhans and Maggie Kang <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
      <li>Jul 05 2025 <em>Surf's Up</em> by Ash Brandon and Chris Buck <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
@@ -108,6 +108,11 @@
      <li><a href="https://litterbox.catbox.moe/">(Litterbox)</a> Temporary file storage (≤ 1GB)</li>
      <li><a href="https://litterbox.catbox.moe/">(Catbox)</a> Permanent file storage (≤ 200MB)</li>
     </ul>
+    <h3>Music</h3>
+    <ul>
+     <li><a href="https://pianobin.com/">(pianobin)</a> Piano sheet music for Paper Lily, Omori, TCOAL, and more</li>
+     <li><a href="https://tanarang.com/">(Tanarang)</a> Collection of various Indian ragas</li>
+    </ul>
     <h3>Miscellanous</h3>
     <ul>
      <li><a href="https://lukesmith.xyz/">(Luke Smith's Webpage)</a> Philosophy, unix, and linguistics</li>
@@ -138,7 +143,6 @@
      <span class="right">July 2025</span>
     </hgroup>
     <ul>
-     <li>Final project for the CS 488 graphics course at the University of Waterloo</li>
     </ul>
     <hgroup>
      <h3>Rigid-body Particle Simulation</h3>
