--- a/writings/2025-07-21-a-haiku-a-day.html
+++ b/writings/2025-07-21-a-haiku-a-day.html
@@ -7,7 +7,7 @@
  <body>
   <header>
    <hgroup><a href="../index.html">[Arnav Kumar]</a> / <h1>A Haiku a Day</h1></hgroup>
-   <p>Jul 18 2025</p>
+   <p>Jul 21 2025</p>
   </header>
   <main>
    <p>
@@ -33,18 +33,55 @@
    <p>
     Here are the haikus from my first week!
    </p>
-   <h3>--- Saturday ---</h3>
+   <hgroup>
+    <h3>Dragged Along</h3>
+    <span class="right">Saturday</span>
+   </hgroup>
 <pre>You apologize
 But today was a great time
 Worry not, dear friend</pre>
-   <h3>--- Sunday ---</h3>
+   <hgroup>
+    <h3>Good Night</h3>
+    <span class="right">Sunday</span>
+   </hgroup>
 <pre>Legs sore, stomach full
-Lifitng words, lifted spirits
+Lifting words, lifted spirits
 Welcome, dear night sky</pre>
-   <h3>--- Monday ---</h3>
+   <hgroup>
+    <h3>Galaxies (Tentai)</h3>
+    <span class="right">Monday</span>
+   </hgroup>
 <pre>Galaxies spinning
 Round and round and round, hours long
 And so spins my head</pre>
+   <hgroup>
+    <h3>Our Coffin</h3>
+    <span class="right">Tuesday</span>
+   </hgroup>
+<pre>Pain, lies, frustration
+You cut me, I cut you too
+But whose blood is whose?</pre>
+   <hgroup>
+    <h3>Summer Heat</h3>
+    <span class="right">Wednesday</span>
+   </hgroup>
+<pre>Heavy air, warm breeze, sun
+Footsteps, laughter, well dressed earth
+Insect orchestra</pre>
+   <hgroup>
+    <h3>Dysmn</h3>
+    <span class="right">Friday</span>
+   </hgroup>
+<pre>Rhythm, emotion
+Scrating the depths of the brain
+Hypnotic sugar</pre>
+   <hgroup>
+    <h3>Campfire</h3>
+    <span class="right">Sunday</span>
+   </hgroup>
+<pre>Semifinal loss
+Now past amber, around ember
+Oh fire, eat our loss</pre>
   </main>
   <footer>
    <p>
