removed haikus (private now)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
    <main>
     <h2>Articles</h2>
     <ul class="blank">
-     <li>Jul 21 2025 <a href="./writings/2025-07-21-a-haiku-a-day.html">[A Haiku a Day]</a></li>
      <li>Jul 02 2025 <a href="./writings/2025-07-02-how-to-walk.html">[How to Walk]</a></li>
      <li>Jun 30 2025 <a href="./writings/2025-06-30-learning-humanity-from-ants.html">[Learning Humanity from Ants]</a></li>
      <li>May 07 2025 <a href="./writings/2025-05-07-the-sacred-marigold.html">[The Sacred Marigold]</a></li>
@@ -49,6 +48,7 @@
     </p>
     <br/>
     <ul class="blank">
+     <li>Jul 24 2025 <em>Look Back</em> by Tatsuki Fujimoto and Studio Durian <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
      <li>Jul 21 2025 <em>Ghost Trick: Phantom Detective</em> by Capcom <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
      <li>Jul 16 2025 <em>The Coffin of Andy and Leyley</em> by Nemlei <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
      <li>Jul 14 2025 <em>Words Bubble Up Like Soda Pop</em> by Kyohei Ishiguro <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
@@ -90,6 +90,7 @@
      <li><a href="https://blog.demofox.org/">(The blog at the bottom of the sea)</a> Graphics, gamedev, computation, audio synthesis</li>
      <li><a href="https://www.cemyuksel.com/">(Cem Yuksel)</a> Graphics research and teaching</li>
      <li><a href="https://terathon.com/lengyel/">(Eric Lengyel)</a> Game engines, geometric algebra, and rendering</li>
+     <li><a href="https://iquilezles.org/">(Inigo Quilez)</a> Shadertoy, ray marching, pathtracing, and more</li>
     </ul>
     <h3>Search Engines</h3>
     <ul>
